--- a/interfaces/TogglePreloader.html
+++ b/interfaces/TogglePreloader.html
@@ -126,6 +126,14 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Defines the structure of the preloader&#39;s state.
+It contains a boolean to indicate if the preloader is active and an optional channel identifier.</p>
+
+            </p>
 
 
         <section data-compodoc="block-index">
