--- a/miscellaneous/enumerations.html
+++ b/miscellaneous/enumerations.html
@@ -381,6 +381,12 @@
                         <span class="name "><b>ReservedMediaFormat</b><a href="#ReservedMediaFormat"><span class="icon ion-ios-link"></span></a></span>
                     </td>
                 </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <div class="io-description"><p>Enum representing reserved media formats identifiers.</p>
+</div>
+                        </td>
+                    </tr>
                         <tr>
                             <td class="col-md-4">
                                 &nbsp;THUMB
