--- a/miscellaneous/typealiases.html
+++ b/miscellaneous/typealiases.html
@@ -355,6 +355,12 @@
             </tr>
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Cache interface for storing data related to target inputs.</p>
+</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
                     <code>    <code>literal type</code>
 </code>
                 </td>
@@ -619,6 +625,12 @@
                 <td class="col-md-4">
                     <a name="MediaTypeVariant"></a>
                     <span class="name "><b>MediaTypeVariant</b><a href="#MediaTypeVariant"><span class="icon ion-ios-link"></span></a></span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Required media type for the input.</p>
+</div>
                 </td>
             </tr>
             <tr>
