--- a/miscellaneous/variables.html
+++ b/miscellaneous/variables.html
@@ -679,6 +679,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Event emitted to hide the preloader.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -705,6 +711,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Event emitted to show the preloader.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
