--- a/injectables/Store.html
+++ b/injectables/Store.html
@@ -119,6 +119,14 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Store is a service that implements an event bus pattern for managing
+application state through message emission and subscription.</p>
+
+            </p>
 
 
 
@@ -189,10 +197,16 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">lib/src/modules/store/src/store.ts:27</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">lib/src/modules/store/src/store.ts:33</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                            <div class="io-description"><p>Creates an instance of Store and initializes the event bus.</p>
+</div>
+                    </td>
+                </tr>
             </tbody>
         </table>
 </section>
@@ -222,8 +236,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="33"
-                                    class="link-to-prism">lib/src/modules/store/src/store.ts:33</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="48"
+                                    class="link-to-prism">lib/src/modules/store/src/store.ts:48</a></div>
                         </td>
                     </tr>
 
@@ -238,6 +252,8 @@
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Emits a message to the event bus with a specified key and optional data.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -248,6 +264,7 @@
                                             <td>Name</td>
                                                 <td>Type</td>
                                             <td>Optional</td>
+                                                <td>Description</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -262,6 +279,12 @@
                                             </td>
 
 
+                                            <td>
+                                                    <ul>
+<li>The key under which the message is emitted.</li>
+</ul>
+
+                                            </td>
                                         </tr>
                                         <tr>
                                                 <td>data</td>
@@ -274,6 +297,12 @@
                                             </td>
 
 
+                                            <td>
+                                                    <ul>
+<li>Optional data payload for the message.</li>
+</ul>
+
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -311,14 +340,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="48"
-                                    class="link-to-prism">lib/src/modules/store/src/store.ts:48</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="74"
+                                    class="link-to-prism">lib/src/modules/store/src/store.ts:74</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Checks if a given key matches a wildcard pattern.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -329,6 +360,7 @@
                                             <td>Name</td>
                                                 <td>Type</td>
                                             <td>Optional</td>
+                                                <td>Description</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -343,6 +375,12 @@
                                             </td>
 
 
+                                            <td>
+                                                    <ul>
+<li>The key to be checked.</li>
+</ul>
+
+                                            </td>
                                         </tr>
                                         <tr>
                                                 <td>wildcard</td>
@@ -355,6 +393,12 @@
                                             </td>
 
 
+                                            <td>
+                                                    <ul>
+<li>The wildcard pattern to match against.</li>
+</ul>
+
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -364,7 +408,8 @@
 
                         </div>
                             <div class="io-description">
-                                
+                                <p>A boolean indicating whether the key matches the wildcard.</p>
+
                             </div>
                 </td>
             </tr>
@@ -390,8 +435,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="41"
-                                    class="link-to-prism">lib/src/modules/store/src/store.ts:41</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="61"
+                                    class="link-to-prism">lib/src/modules/store/src/store.ts:61</a></div>
                         </td>
                     </tr>
 
@@ -406,6 +451,8 @@
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Subscribes to messages emitted under the specified key.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -416,6 +463,7 @@
                                             <td>Name</td>
                                                 <td>Type</td>
                                             <td>Optional</td>
+                                                <td>Description</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -430,6 +478,12 @@
                                             </td>
 
 
+                                            <td>
+                                                    <ul>
+<li>The key for which messages are to be subscribed.</li>
+</ul>
+
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -439,7 +493,8 @@
 
                         </div>
                             <div class="io-description">
-                                
+                                <p>An observable of StoreMessage that emits messages with the matching key.</p>
+
                             </div>
                 </td>
             </tr>
@@ -472,10 +527,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="26" class="link-to-prism">lib/src/modules/store/src/store.ts:26</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">lib/src/modules/store/src/store.ts:31</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Subject that acts as the event bus for messages.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -505,10 +566,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">lib/src/modules/store/src/store.ts:27</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">lib/src/modules/store/src/store.ts:33</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Separator used in keys for matching purposes.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -524,16 +591,31 @@ import {StoreMessage} from &quot;./store-message&quot;;
 import {StoreMessageMd} from &quot;./store-message-md&quot;;
 import {Injectable} from &quot;@angular/core&quot;;
 
+/**
+ * Store is a service that implements an event bus pattern for managing
+ * application state through message emission and subscription.
+ */
 @Injectable({providedIn: &quot;root&quot;})
 export class Store {
 
+  /** Subject that acts as the event bus for messages. */
   private readonly eventBus: Subject&lt;StoreMessage&gt;;
+  /** Separator used in keys for matching purposes. */
   private readonly separator &#x3D; &quot;:&quot;;
 
+  /**
+   * Creates an instance of Store and initializes the event bus.
+   */
   constructor() {
     this.eventBus &#x3D; new Subject&lt;StoreMessage&gt;();
   }
 
+  /**
+   * Emits a message to the event bus with a specified key and optional data.
+   * @param key - The key under which the message is emitted.
+   * @param data - Optional data payload for the message.
+   * @throws Error if the key is an empty string.
+   */
   emit&lt;T &#x3D; unknown&gt;(key: string, data?: T): void {
     if (!key.trim().length) {
       throw new Error(&quot;key parameter must be a string and must not be empty&quot;);
@@ -542,6 +624,11 @@ export class Store {
     this.eventBus.next({key, payload: data, metadata});
   }
 
+  /**
+   * Subscribes to messages emitted under the specified key.
+   * @param key - The key for which messages are to be subscribed.
+   * @returns An observable of StoreMessage that emits messages with the matching key.
+   */
   on&lt;T &#x3D; unknown&gt;(key: string): Observable&lt;StoreMessage&lt;T&gt;&gt; {
     return this.eventBus.asObservable().pipe(
       filter((event: StoreMessage) &#x3D;&gt; this.keyMatch(event.key, key)),
@@ -549,6 +636,12 @@ export class Store {
     ) as Observable&lt;StoreMessage&lt;T&gt;&gt;;
   }
 
+  /**
+   * Checks if a given key matches a wildcard pattern.
+   * @param key - The key to be checked.
+   * @param wildcard - The wildcard pattern to match against.
+   * @returns A boolean indicating whether the key matches the wildcard.
+   */
   private keyMatch(key: string, wildcard: string): boolean {
     const w &#x3D; &quot;*&quot;;
     const ww &#x3D; &quot;**&quot;;
