--- a/interfaces/MediaType.html
+++ b/interfaces/MediaType.html
@@ -126,6 +126,13 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Represents the type of media.</p>
+
+            </p>
 
 
         <section data-compodoc="block-index">
@@ -432,6 +439,9 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {UploadEvent} from &quot;primeng/fileupload&quot;;
 import {LocalizedString} from &quot;../../locale&quot;;
 
+/**
+ * Represents a media object.
+ */
 export interface Media {
   id: number;
   code: string;
@@ -440,6 +450,9 @@ export interface Media {
   files: MediaFile[];
 }
 
+/**
+ * Represents the type of media.
+ */
 export interface MediaType {
   code: string;
   name: string;
@@ -450,6 +463,9 @@ export interface MediaType {
   formats: MediaFormat[];
 }
 
+/**
+ * Represents the format of a media file.
+ */
 export interface MediaFormat {
   code: string;
   name: string;
@@ -457,6 +473,9 @@ export interface MediaFormat {
   height: string;
 }
 
+/**
+ * Represents a file associated with a media item.
+ */
 export interface MediaFile {
   id: number;
   code: string;
@@ -468,11 +487,17 @@ export interface MediaFile {
   media: Media;
 }
 
+/**
+ * Represents the extension of a media type.
+ */
 export interface MediaExt {
   code: string;
   name: string;
 }
 
+/**
+ * Represents an event triggered by a file upload.
+ */
 export interface FileUploadEvent extends UploadEvent {
   files: File[];
 }
