--- a/pipes/ProcessLogPipe.html
+++ b/pipes/ProcessLogPipe.html
@@ -123,6 +123,15 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Pipe for processes log strings into structured HTML.
+It transforms log entries formatted in a specific way, allowing for enhanced readability
+by converting log data into HTML elements.</p>
+
+            </p>
 
 
         <section data-compodoc="block-metadata">
@@ -166,14 +175,17 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="9"
-                                    class="link-to-prism">lib/src/modules/process/src/process-log.pipe.ts:9</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="20"
+                                    class="link-to-prism">lib/src/modules/process/src/process-log.pipe.ts:20</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Transforms a log string into an HTML representation.
+         If the input value is empty, it returns an empty string.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -184,6 +196,7 @@
                                             <td>Name</td>
                                                 <td>Type</td>
                                             <td>Optional</td>
+                                                <td>Description</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -198,6 +211,12 @@
                                             </td>
 
 
+                                            <td>
+                                                    <ul>
+<li>The log string to be processed.</li>
+</ul>
+
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -207,7 +226,9 @@
 
                         </div>
                             <div class="io-description">
-                                
+                                <p>A string containing HTML elements representing the log entries.
+If the input value is empty, it returns an empty string.</p>
+
                             </div>
                 </td>
             </tr>
@@ -221,32 +242,49 @@
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Pipe, PipeTransform} from &quot;@angular/core&quot;;
 
+/**
+ * Pipe for processes log strings into structured HTML.
+ * It transforms log entries formatted in a specific way, allowing for enhanced readability
+ * by converting log data into HTML elements.
+ */
 @Pipe({
   name: &quot;processLog&quot;,
   standalone: true
 })
 export class ProcessLogPipe implements PipeTransform {
 
+  /**
+   * Transforms a log string into an HTML representation.
+   * @param value - The log string to be processed.
+   * @returns A string containing HTML elements representing the log entries.
+   *          If the input value is empty, it returns an empty string.
+   */
   transform(value: string): string {
+    // Return empty string for falsy values
     if (!value) {
       return &quot;&quot;;
     }
+    // Split log entries by the delimiter and filter out empty lines
     const lines &#x3D; value.split(&quot;&gt;&gt;&gt;\n&quot;).filter(v &#x3D;&gt; v?.length &gt; 0);
+    // Parse each line into structured HTML
     const parsedLines &#x3D; lines.map(line &#x3D;&gt; {
-      const parts &#x3D; line.match(/\[(.*)]/g);
+      const parts &#x3D; line.match(/\[(.*)]/g); // Extract parts enclosed in brackets
       const logData &#x3D; parts.map(part &#x3D;&gt; {
+        // Extract process ID, date, and log level from the matched part
         const [pid, date, level] &#x3D; part.slice(1, -1).split(&quot; | &quot;);
         return {
           pid: &#x60;&lt;span class&#x3D;&quot;pid&quot;&gt;${pid}&lt;/span&gt;&#x60;,
           date: &#x60;&lt;span class&#x3D;&quot;date&quot;&gt;${date}&lt;/span&gt;&#x60;,
           level: &#x60;&lt;span class&#x3D;&quot;level&quot;&gt;${level}&lt;/span&gt;&#x60;,
-          content: line.replace(part, &quot;&quot;),
-          cls: level.toLowerCase(),
+          content: line.replace(part, &quot;&quot;), // Remove the part from the line to get the content
+          cls: level.toLowerCase(), // Use log level as a CSS class
         };
       });
+      // Construct HTML for the log entry
       return &#x60;&lt;div class&#x3D;&quot;${logData[0].cls}&quot;&gt;&#x60;
         + &#x60;[${logData[0].pid} ${logData[0].date} ${logData[0].level}]${logData[0].content}&lt;/div&gt;&#x60;;
     });
+    // Reverse the order of log entries and join them into a single string
     return parsedLines.reverse().join(&quot;\n&quot;);
   }
 
