--- a/pipes/RefNamePipe.html
+++ b/pipes/RefNamePipe.html
@@ -123,6 +123,14 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>This pipe transforms a given entity into a human-readable name
+based on its target data and localization settings.</p>
+
+            </p>
 
 
         <section data-compodoc="block-metadata">
@@ -166,14 +174,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="30"
-                                    class="link-to-prism">lib/src/modules/ref-input/src/ref-name.pipe.ts:30</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="40"
+                                    class="link-to-prism">lib/src/modules/ref-input/src/ref-name.pipe.ts:40</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Transforms the given entity into a localized name based on the target data.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -184,6 +194,7 @@
                                             <td>Name</td>
                                                 <td>Type</td>
                                             <td>Optional</td>
+                                                <td>Description</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -198,6 +209,12 @@
                                             </td>
 
 
+                                            <td>
+                                                    <ul>
+<li>The entity object from which to extract the name.</li>
+</ul>
+
+                                            </td>
                                         </tr>
                                         <tr>
                                                 <td>target</td>
@@ -210,6 +227,12 @@
                                             </td>
 
 
+                                            <td>
+                                                    <ul>
+<li>The target data containing information about the entity.</li>
+</ul>
+
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -219,7 +242,8 @@
 
                         </div>
                             <div class="io-description">
-                                
+                                <p>The localized name of the entity or an empty string if the target is not defined.</p>
+
                             </div>
                 </td>
             </tr>
@@ -251,7 +275,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">lib/src/modules/ref-input/src/ref-name.pipe.ts:28</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">lib/src/modules/ref-input/src/ref-name.pipe.ts:32</a></div>
                         </td>
                     </tr>
 
@@ -269,6 +293,10 @@ import {LocalizedString, LocalizePipe} from &quot;../../locale&quot;;
 import {PlainObject} from &quot;../../../global/vars&quot;;
 import {TargetData} from &quot;../../../components/explorer&quot;;
 
+/**
+ * This pipe transforms a given entity into a human-readable name
+ * based on its target data and localization settings.
+ */
 @Pipe({
   name: &quot;refName&quot;,
   standalone: true
@@ -277,19 +305,26 @@ export class RefNamePipe implements PipeTransform {
 
   private readonly localizePipe &#x3D; inject(LocalizePipe);
 
+  /**
+   * Transforms the given entity into a localized name based on the target data.
+   * @param entity - The entity object from which to extract the name.
+   * @param target - The target data containing information about the entity.
+   * @returns The localized name of the entity or an empty string if the target is not defined.
+   */
   transform(entity: PlainObject, target: TargetData) {
     if (!target) {
-      return &quot;&quot;;
+      return &quot;&quot;; // Return empty string if target is not provided
     }
-    const val &#x3D; entity[target.namedColumn.property];
+    const val &#x3D; entity[target.namedColumn.property]; // Get the value from the entity based on the target
     if (val) {
       if (target.namedColumn.referencedEntityName &#x3D;&#x3D;&#x3D; &quot;LocalizedStringEntity&quot;) {
+        // Use localization if the entity references a localized string
         return this.localizePipe.transform(
           val as LocalizedString[], entity[target.primaryColumn.property] as string
         );
       }
     }
-    return entity[target.primaryColumn.property];
+    return entity[target.primaryColumn.property]; // Return the primary column value if no localization is needed
   }
 
 }
