deploy: 4d03d6fcbb13f3a1735e85a8da081a9191aea182

--- a/classes/ExplorerAction.html
+++ b/classes/ExplorerAction.html
@@ -123,6 +123,13 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Represents an action in the explorer.</p>
+
+            </p>
 
 
 
@@ -385,7 +392,7 @@ export interface ExplorerColumn {
 }
 
 /**
- * @description Represents an action in the explorer.
+ * Represents an action in the explorer.
  */
 export class ExplorerAction {
   code: string;
