--- a/interfaces/SectionFilterDialogConfig.html
+++ b/interfaces/SectionFilterDialogConfig.html
@@ -350,7 +350,7 @@ export interface ExplorerColumn {
 }
 
 /**
- * @description Represents an action in the explorer.
+ * Represents an action in the explorer.
  */
 export class ExplorerAction {
   code: string;
