--- a/interfaces/ExplorerColumn.html
+++ b/interfaces/ExplorerColumn.html
@@ -1091,7 +1091,7 @@ export interface ExplorerColumn {
 }
 
 /**
- * @description Represents an action in the explorer.
+ * Represents an action in the explorer.
  */
 export class ExplorerAction {
   code: string;
