--- a/interfaces/ExplorerTarget.html
+++ b/interfaces/ExplorerTarget.html
@@ -824,7 +824,7 @@ export interface ExplorerColumn {
 }
 
 /**
- * @description Represents an action in the explorer.
+ * Represents an action in the explorer.
  */
 export class ExplorerAction {
   code: string;
